[tool.poetry]
name = "stepflow"
version = "0.1.0"
description = "StepFlow for statemachine"
authors = ["Zhihao Liu <liuzhihao0206@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.39"
fastapi = "^0.115.11"
pytest = "^8.3.5"
requests = "^2.32.3"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
